[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemquests"
version = "1.0.2"
description = "Dark web HTTP requests using Tor, a stem helper library."
readme = "README.md"
authors = [{ name = "Ian Costa", email = "costa.ian18@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
keywords = ["tor", "requests", "stem", "dark web"]
dependencies = [
    "requests[socks]",
    "stem",
    "psutil"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pylint", "autopep8", "isort", "pytest", "pip-tools", "build", "twine"]

[project.urls]
"Homepage" = "https://github.com/SammyTheBEAST/stemquests"
"Bug Tracker" = "https://github.com/SammyTheBEAST/stemquests/issues"
